# vertex_yolo_easyocr

./: .env  Dockerfile  README.md  pyproject.toml
scripts/: build_and_deploy.sh  download_weights.sh  invoke_endpoint.py
src/: constants.py  main.py
tests/: test_main.py
