[project]
name = "vertex_yolo_easyocr"
version = "0.1.0"
description = "Vertex AI custom container that performs ROI detection using YOLO and text recognition with EasyOCR."
authors = ["Your Name <you@example.com>"]

requires-python = ">=3.10,<3.13"

# Core dependencies used by the inference server.
dependencies = [
    # Ultralytics for YOLO object detection models.
    "ultralytics>=8.0.0",
    # EasyOCR for optical character recognition.
    "easyocr>=1.6.2",
    # PyTorch as minimum version required.
    "torch>=2.0.0",
    # FastAPI and Uvicorn for serving the HTTP API.
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.20.0",
    # Pillow for image loading and manipulation.
    "pillow>=9.0.0",
    # numpy for array manipulations.
    "numpy>=1.23.0",
    # loguru provides structured logging.
    "loguru>=0.6.0",
    # Google Cloud Vertex AI client library for invoking endpoints.
    "google-cloud-aiplatform>=1.34.0",
    # python-multipart for handling file uploads in FastAPI.
    "python-multipart>=0.0.6",
    # OpenCV headless variant for image processing.
    "opencv-python-headless>=4.6.0",
    # python-dotenv for loading environment variables from .env files.
    "python-dotenv>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
