[project]
name = "vertex_yolo_easyocr"
version = "0.1.0"
description = "Vertex AI custom container that performs ROI detection using YOLO and text recognition with EasyOCR."
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.10,<3.13"

dependencies = [
       "ultralytics>=8.0.0",
    "easyocr>=1.6.2",
    "torch>=2.0.0",
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.20.0",
    "pillow>=9.0.0",
    "numpy>=1.23.0",
    "loguru>=0.6.0",
    "google-cloud-aiplatform>=1.34.0",
    "python-multipart>=0.0.6",
    "opencv-python-headless>=4.6.0",
    "python-dotenv>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
